--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -100,8 +100,8 @@
       %script#hs-script-loader{:async => "", :defer => "defer", :src => "//js.hs-scripts.com/6671711.js"}
       / End of HubSpot Embed Code
       /Mailchimp general code  to enable pop-up forms and Google remarketing ads.
-      %script#mcjs
-        \!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2f0c64d332f18eea892b395f9/8fd8545e68d5393478351ccba.js");
+      -# %script#mcjs
+      -#   \!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2f0c64d332f18eea892b395f9/8fd8545e68d5393478351ccba.js");
       :javascript
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
