--- a/app/views/layouts/new_layout.html.haml
+++ b/app/views/layouts/new_layout.html.haml
@@ -72,8 +72,9 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-W4PPCSJ');
       / End Google Tag Manager
-      %script#mcjs
-        \!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2f0c64d332f18eea892b395f9/8fd8545e68d5393478351ccba.js");
+      /Mailchimp general code  to enable pop-up forms and Google remarketing ads.
+      -# %script#mcjs
+      -#   \!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2f0c64d332f18eea892b395f9/8fd8545e68d5393478351ccba.js");
 
       / Facebook Pixel Code
       :javascript
