--- a/app/views/main/landing.html.haml
+++ b/app/views/main/landing.html.haml
@@ -30,7 +30,7 @@
         .text{"data-aos" => "fade-right", "data-aos-delay" => "600", "data-aos-duration" => "1000"}
           %h3 Search for new partners
           %p Search for new partners by country, available nomenclature documentation and declared standards of cooperation.
-          %a.btn.btn__transparent.btn__small{href:marketplace_path(anchor:"/map")}=t("common.go_to_map")
+          %a.btn.btn__transparent.btn__small{href:"marketplace/map"}=t("common.go_to_map")
       .benefits-list--item
         .img{"data-aos" => "fade-right", "data-aos-delay" => "300", "data-aos-duration" => "1000"}
           =image_tag "bid.png", alt: 'Global Supplies - Give a BID for potential partner', title: 'Global Supplies- Give a BID for potential partner'
